[project]
name = "konch"
version = "4.5.0"
description = "CLI and configuration utility for the Python shell, optimized for simplicity and productivity."
readme = "README.rst"
license = { file = "LICENSE" }
maintainers = [{ name = "Steven Loria", email = "sloria1@gmail.com" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Shells",
]
requires-python = ">=3.8"

[project.scripts]
konch = "konch:main"

[project.urls]
Changelog = "https://konch.readthedocs.io/en/latest/changelog.html"
Issues = "https://github.com/sloria/konch/issues"
Source = "https://github.com/sloria/konch/"

[project.optional-dependencies]
dev = ["konch[tests]", "ptpython", "tox"]
docs = ["sphinx==7.3.7", "sphinx-issues==4.1.0"]
tests = ["pytest", "scripttest==1.3", "ipython", "bpython"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
  "docs/",
  "tests/",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "NOTICE",
  "tox.ini",
]
exclude = ["docs/_build/", "tests/test-output"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
show-source = true

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]

[tool.mypy]
ignore_missing_imports = true
